update test and error message
